prod: updated landing page, 404 page and funding methods

--- a/404.html
+++ b/404.html
@@ -7,36 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>MathFlare - 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="MathFlare">
-    <meta name="keywords"
-        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="author" content="MathFlare LLC." />
-    <meta name="og:url" content="https://www.mathflare.tk" />
-    <meta name="og:title" content="MathFlare" />
-    <meta name="og:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="og:image" content="Assets/logo.png" />
-    <meta name="og:locale" content="en_US" />
-    <meta name="og:locale" content="website" />
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta http-equiv="refresh" content="10">
     <!-- STYLES -->
-    <link href="Content/bootstrap.css" rel="stylesheet" />
-    <link href="Styles/Footer.css" rel="stylesheet" />
-    <link href="Styles/Profile.css" rel="stylesheet" />
-    <link href="Styles/Scrollbar.css" rel="stylesheet" />
-    <link href="Styles/Site.css" rel="stylesheet" />
+    <link href="./Content/bootstrap.css" rel="stylesheet" />
+    <link href="./Styles/Scrollbar.css" rel="stylesheet" />
+    <link href="./Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="Assets/favicon.ico">
+    <link rel="icon" href="./Assets/favicon.ico">
 </head>
 
 <body>
@@ -45,23 +26,21 @@
     <!-- NAVBAR END -->
     <div class="dead-center">
         <h1 class="text-white">Oops!</h1>
-        <img src="Assets/oops.png" alt="thinking emoji" style="width: 34%; height: auto" />
-        <div class="m-2">
-            <h2 class="text-white d-inline-flex bg-danger p-1 rounded mb-3">Error 404</h2>
+        <div class="m-4">
+            <img src="./Assets/404.svg" alt="404 error not found" class="img-fluid" width="400vh" />
         </div>
-        <h4 class="text-white" id="user-error-explanation">it seems that the page <i id="pathname"></i> does not exist
-            on this server...</h4>
-        <div class="d-inline-flex mb-2">
-            <a href="./index.html" class="btn btn-primary m-1"><i class="bi bi-house"></i> Go to the Home Page</a>
+        <p class="lead fw-normal">Error 404 Not Found</p>
+        <div class="d-block d-md-inline-flex">
+            <a href="../index.html" class="btn btn-light m-1"><i class="bi bi-house"></i> Go to the Home Page</a>
             <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
                 class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
-    <script src="Scripts/jquery-3.0.0.js"></script>
-    <script src="Scripts/bootstrap.js"></script>
-    <script src="dist/navbar.js"></script>
-    <script src="dist/http-404.js"></script>
+    <script src="./Scripts/jquery-3.0.0.js"></script>
+    <script src="./Scripts/bootstrap.js"></script>
+    <script src="./dist/navbar.js"></script>
+    <script src="./dist/http-404.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
