--- a/index.html
+++ b/index.html
@@ -57,31 +57,35 @@
             today</a>!
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
     </div> -->
-    <div class="dead-center">
-        <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo"
-                style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</h1>
-        <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
-        <div class="d-inline-flex">
-            <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i
-                    class="bi bi-github"></i> GitHub</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
-                class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
-                class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
+    <div class="container" style="margin-top: 10em;">
+        <div class="text-center mb-5">
+            <h1 class="display-5" style="font-weight: 450;"> <img src="Assets/icon.png" class="user-select-none mb-1"
+                    style="height: 1em;" alt="logo"> MathFlare</h1>
+            <i class="lead fw-normal text-danger">the go-to website for algebra and geometry</i>
         </div>
-        <div>
-            <div class="dropdown m-2">
-                <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton1"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    🍕Donate to MathFlare
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="https://paypal.me/mathflare" target="_blank" rel="noopener"><i
-                                class="bi bi-heart-fill" style="color: var(--bs-pink);"></i> PayPal</a></li>
-                    <li><a class="dropdown-item" href="https://buymeacoffee.com/mathflare" target="_blank"
-                            rel="noopener"><i class="bi bi-heart-fill" style="color: var(--bs-pink);"></i>
-                            Buymeacoffee</a></li>
-                </ul>
+        <div class="row align-items-center justify-content-between mb-5">
+            <div class="col-md p-2 p-md-5">
+                <h2 class="text-warning fw-normal">60+ Calculators</h2>
+                <p class="lead">With our ever-expanding collection of fully functional and advanced calculators, we got
+                    you covered for any problem you may encounter.</p>
+            </div>
+            <div class="col-md d-none d-md-block">
+                <img src="Assets/calculator.svg" alt="calculator" width="80%" class="img-fluid">
+            </div>
+        </div>
+        <div class="row align-items-center justify-content-between mb-5">
+            <div class="col-md d-none d-md-block">
+                <img src="Assets/rocket.svg" alt="calculator" width="80%" class="img-fluid">
+            </div>
+            <div class="col-md p-2 p-md-5">
+                <h2 class="text-warning fw-normal">Support the Opensource Project</h2>
+                <p class="lead">As an opensource project with no advertisements or shady data collection, MathFlare's
+                    only source of income are donations from our supporters. If you would like to help us
+                    continue developing MathFlare, please consider financially supporting us through <a
+                        href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
+                        class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
+                        rel="noopener" class="donate-link">Ko-fi</a> or <a href="https://paypal.me/mathflare"
+                        target="_blank" rel="noopener" class="donate-link">PayPal</a></p>
             </div>
         </div>
     </div>
