prod: updated landing page and navbar

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
-    <!-- SCRIPTS -->
-    <script data-ad-client="ca-pub-1524024547471266" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -59,18 +58,51 @@
     </div> -->
     <div class="container" style="margin-top: 10em;">
         <div class="text-center mb-5">
-            <h1 class="display-5" style="font-weight: 450;"> <img src="Assets/icon.png" class="user-select-none mb-1"
+            <h1 class="display-5" style="font-weight: 450;"><img src="Assets/icon.png" class="user-select-none mb-1"
                     style="height: 1em;" alt="logo"> MathFlare</h1>
-            <i class="lead fw-normal text-danger">the go-to website for algebra and geometry</i>
+            <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Nunito', Poppins, sans-serif;">the go-to website for algebra and geometry</p>
         </div>
         <div class="row align-items-center justify-content-between mb-5">
+            <div class="col-md d-none d-md-block">
+                <img src="Assets/calculator.svg" alt="calculator" width="80%" class="img-fluid">
+            </div>
             <div class="col-md p-2 p-md-5">
                 <h2 class="text-warning fw-normal">60+ Calculators</h2>
                 <p class="lead">With our ever-expanding collection of fully functional and advanced calculators, we got
                     you covered for any problem you may encounter.</p>
             </div>
+        </div>
+        <div class="row align-items-center justify-content-between mb-5">
+            <div class="col-md p-2 p-md-5">
+                <h2 class="text-warning fw-normal">Built to assist students of all grades</h2>
+                <p class="lead">MathFlare's goal is to help students of all grades to achieve academic success by
+                    offering numerous useful tools and documentation for free.</p>
+            </div>
             <div class="col-md d-none d-md-block">
-                <img src="Assets/calculator.svg" alt="calculator" width="80%" class="img-fluid">
+                <img src="Assets/exam.svg" alt="calculator" width="80%" class="img-fluid">
+            </div>
+        </div>
+        <div class="row align-items-center justify-content-between mb-5">
+            <div class="col-md d-none d-md-block">
+                <img src="Assets/ease-of-use.svg" alt="calculator" width="80%" class="img-fluid">
+            </div>
+            <div class="col-md p-2 p-md-5">
+                <h2 class="text-warning fw-normal">Easy to Use</h2>
+                <p class="lead">Our website's comprehensive layout and design allows for a pleasing user experience
+                    while allowing the visually impaired to use our calculators like normal.</p>
+            </div>
+        </div>
+        <div class="row align-items-center justify-content-between mb-5">
+            <div class="col-md p-2 p-md-5">
+                <h2 class="text-warning fw-normal">Open to suggestions and new ideas</h2>
+                <p class="lead">We really appreciate feedback and suggestions as it is the only way for us to know if we
+                    have done any mistake or could have done something better. Feel free to <a
+                        href="mailto:mathflare@pm.me" target="_blank" rel="noopener">email us</a> or use our <a
+                        href="contact.html">contact form</a> to report any mistakes or suggest an addition to our site.
+                </p>
+            </div>
+            <div class="col-md d-none d-md-block">
+                <img src="Assets/feedback.svg" alt="calculator" width="80%" class="img-fluid">
             </div>
         </div>
         <div class="row align-items-center justify-content-between mb-5">
@@ -78,8 +110,8 @@
                 <img src="Assets/rocket.svg" alt="calculator" width="80%" class="img-fluid">
             </div>
             <div class="col-md p-2 p-md-5">
-                <h2 class="text-warning fw-normal">Support the Opensource Project</h2>
-                <p class="lead">As an opensource project with no advertisements or shady data collection, MathFlare's
+                <h2 class="text-warning fw-normal">Support the Open Source Project</h2>
+                <p class="lead">As an open source project with no advertisements or shady data collection, MathFlare's
                     only source of income are donations from our supporters. If you would like to help us
                     continue developing MathFlare, please consider financially supporting us through <a
                         href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
