prod: updated SEO tags

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MathFlare</title>
     <meta name="title" content="MathFlare">
     <meta name="keywords"
-        content="mathflare, math-flare, math flare,liquidgeometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
+        content="mathflare, math-flare, math flare,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
     <meta name="description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="author" content="MathFlare LLC." />
+        content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
+    <meta name="author" content="MathFlare Co Ltd." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
     <meta name="og:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+        content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+        content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
     <meta name="twitter:image" content="Assets/logo.png">
     <link rel="canonical" href="https://www.mathflare.tk">
     <link rel="home" href="https://www.mathflare.tk">
@@ -60,7 +60,8 @@
         <div class="text-center mb-5">
             <h1 class="display-5" style="font-weight: 450;"><img src="Assets/icon.png" class="user-select-none mb-1"
                     style="height: 1em;" alt="logo"> MathFlare</h1>
-            <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Nunito', Poppins, sans-serif;">the go-to website for algebra and geometry</p>
+            <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Nunito', Poppins, sans-serif;">the go-to
+                website for algebra and geometry</p>
         </div>
         <div class="row align-items-center justify-content-between mb-5">
             <div class="col-md d-none d-md-block">
