--- a/stats.html
+++ b/stats.html
@@ -7,25 +7,9 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Stats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="MathFlare">
-    <meta name="keywords"
-        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="author" content="MathFlare LLC." />
-    <meta name="og:url" content="https://www.mathflare.tk" />
-    <meta name="og:title" content="MathFlare" />
-    <meta name="og:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="og:image" content="Assets/logo.png" />
-    <meta name="og:locale" content="en_US" />
-    <meta name="og:locale" content="website" />
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <title>MathFlare - Stats</title>
+    <link rel="canonical" href="https://www.mathflare.tk/stats">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
