--- a/contact.html
+++ b/contact.html
@@ -2,34 +2,17 @@
 <html lang="en">
 
 <head>
-    <!-- MAIL -->
-    <meta name="yandex-verification" content="f86171133514f762" />
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>MathFlare - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="MathFlare">
-    <meta name="keywords"
-        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="author" content="MathFlare LLC." />
-    <meta name="og:url" content="https://www.mathflare.tk" />
-    <meta name="og:title" content="MathFlare" />
-    <meta name="og:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="og:image" content="Assets/logo.png" />
-    <meta name="og:locale" content="en_US" />
-    <meta name="og:locale" content="website" />
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="title" content="MathFlare - Contact">
+    <meta name="author" content="MathFlare Co. Ltd." />
+    <link rel="canonical" href="https://www.mathflare.tk/contact">
+    <link rel="home" href="https://www.mathflare.tk">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
-    <link href="Styles/Footer.css" rel="stylesheet" />
-    <link href="Styles/Profile.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
@@ -76,7 +59,8 @@
             </div>
         </form>
         <p id="user-message"></p>
-        <p><i class="bi bi-lightning"></i> Didn't work? why don't you send us an <a href="mailto:mathflare@pm.me" target="_blank" rel="noopener">email</a>?</p>
+        <p><i class="bi bi-lightning"></i> Didn't work? why don't you send us an <a href="mailto:mathflare@pm.me"
+                target="_blank" rel="noopener">email</a>?</p>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
