--- a/logar.html
+++ b/logar.html
@@ -5,29 +5,26 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Logarithms</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="MathFlare">
-    <meta name="keywords"
-        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="author" content="MathFlare LLC." />
-    <meta name="og:url" content="https://www.mathflare.tk" />
-    <meta name="og:title" content="MathFlare" />
-    <meta name="og:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <title>MathFlare - Logarithm Calculator</title>
+    <meta name="title" content="MathFlare - Logarithm Calculator">
+    <meta name="og:title" content="MathFlare - Logarithm Calculator" />
+    <meta name="twitter:title" content="MathFlare - Logarithm Calculator" />
+    <meta name="keywords" content="logarithm, natural logarithm, calculator, algebra, math, mathflare, math flare">
+    <meta name="description" content="Easily calculate logarithms" />
+    <meta name="og:description" content="Easily calculate logarithms" />
+    <meta name="twitter:description" content="Easily calculate logarithms" />
+    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="og:url" content="https://www.mathflare.tk/logar" />
+    <link rel="canonical" href="https://www.mathflare.tk/logar">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
-    <meta name="og:locale" content="website" />
+    <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description"
-        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:image" content="Assets/logo.png">
+    <link rel="home" href="https://www.mathflare.tk">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
-    <link href="Styles/Footer.css" rel="stylesheet" />
-    <link href="Styles/Profile.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
