fix: fixed trapezoid diagonal calculator

--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -118,7 +118,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="asincalc" class="btn btn-success btn-lg" value="Calculate Sin">
+                <input type="submit" id="asincalc" class="btn btn-success btn-lg" value="Calculate Arcsin">
             </div>
         </form>
         <br>
@@ -138,7 +138,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="acoscalc" class="btn btn-success btn-lg" value="Calculate Cos">
+                <input type="submit" id="acoscalc" class="btn btn-success btn-lg" value="Calculate Arccos">
             </div>
         </form>
         <br>
@@ -158,7 +158,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="atancalc" class="btn btn-success btn-lg" value="Calculate Tan">
+                <input type="submit" id="atancalc" class="btn btn-success btn-lg" value="Calculate Arctan">
             </div>
         </form>
         <br>
