--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -170,6 +170,66 @@
             <a href="https://www.google.com/search?q=calculate+arctan" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
+        <hr style="width: 50%;">
+        <form autocomplete="off">
+            <h4 class="text-white">Hyperbolic Sine</h4>
+            <div class="center-form">
+                <input type="number" id="sinha" placeholder="angle&#176;" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form">
+                <input type="submit" id="sinhcalc" class="btn btn-success btn-lg" value="Calculate Sinh">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="sinhout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+hyperbolic+sine" target="_blank" rel="noopener"
+                class="btn btn-outline-light m-2">Find information on the web</a>
+        </div>
+        <hr style="width: 50%;">
+        <form autocomplete="off">
+            <h4 class="text-white">Hyberbolic Cosine</h4>
+            <div class="center-form">
+                <input type="number" id="cosha" placeholder="angle&#176;" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form">
+                <input type="submit" id="coshcalc" class="btn btn-success btn-lg" value="Calculate Cosh">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="coshout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+hyperbolic+cosine" target="_blank" rel="noopener"
+                class="btn btn-outline-light m-2">Find information on the web</a>
+        </div>
+        <hr style="width: 50%;">
+        <form autocomplete="off">
+            <h4 class="text-white">Hyperbolic Tangent</h4>
+            <div class="center-form">
+                <input type="number" id="tanha" placeholder="angle&#176;" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form">
+                <input type="submit" id="tanhcalc" class="btn btn-success btn-lg" value="Calculate Tan">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="tanhout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+hyperbolic+tangent" target="_blank" rel="noopener"
+                class="btn btn-outline-light m-2">Find information on the web</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
