test: don't tell anyone but we are applying to some ad servises

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
+    <!-- ADS -->
+    <meta name="propeller" content="8c3ff615bf3d0310e33d8b8322831e98">
 </head>
 
 <body>
