test: just ignore

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
             </div>
         </div>
     </div>
+    <div class="m-5 p-3">
+        <script type="text/javascript" src="//inpage-push.com/400/4421053" data-cfasync="false" async="async"></script>
+    </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
