--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
-    <!-- ADS -->
-    <meta name="propeller" content="8c3ff615bf3d0310e33d8b8322831e98">
+    <script type="text/javascript"> var infolinks_pid = 3339104; var infolinks_wsid = 0;</script>
+    <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </head>
 
 <body>
@@ -125,7 +125,6 @@
         </div>
     </div>
     <div class="m-5 p-3">
-        <script type="text/javascript" src="//inpage-push.com/400/4421053" data-cfasync="false" async="async"></script>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
