prod: changed donate link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     continue developing MathFlare, please consider financially supporting us through <a
                         href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
                         class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
-                        rel="noopener" class="donate-link">Ko-fi</a> or <a href="https://paypal.me/mathflare"
+                        rel="noopener" class="donate-link">Ko-fi</a> or <a href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC"
                         target="_blank" rel="noopener" class="donate-link">PayPal</a></p>
             </div>
         </div>
