--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -66,6 +66,34 @@
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
+            <h4 class="text-white">Parallelogram</h4>
+            <div class="center-form">
+                <input type="number" id="pcd" placeholder="first side" class="form-control mb-0" min="0" step="0.1"/>
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="pad" placeholder="second side" class="form-control mb-0" min="0" step="0.1"/>
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="pd" placeholder="angle&#176;" class="form-control mb-0" min="0" step="0.1"/>
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="paracalc" class="btn btn-success btn-lg" value="Calculate">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p id="paraout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=diagonal+of+a+parallelogram" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
             <h4 class="text-white">Number of Diagonals in a Convex Polygon</h4>
             <div class="center-form">
                 <input type="number" id="vertex" placeholder="number of vertices" class="form-control mb-0" min="3" />
