prod: patreon link

--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
                     continue developing MathFlare, please consider financially supporting us through <a
                         href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
                         class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
-                        rel="noopener" class="donate-link">Ko-fi</a> or <a href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC"
-                        target="_blank" rel="noopener" class="donate-link">PayPal</a></p>
+                        rel="noopener" class="donate-link">Ko-fi</a>, <a href="https://patreon.com/mathflare"
+                        target="_blank" rel="noopener" class="donate-link">Patreon</a> or <a
+                        href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC" target="_blank"
+                        rel="noopener" class="donate-link">PayPal</a></p>
             </div>
         </div>
     </div>
