--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
                         rel="noopener" class="donate-link">Ko-fi</a>, <a href="https://patreon.com/mathflare"
                         target="_blank" rel="noopener" class="donate-link">Patreon</a> or <a
-                        href="https://www.paypal.com/donate?hosted_button_id=PMZ6QF7DDFQZC" target="_blank"
+                        href="https://www.paypal.me/mathflare" target="_blank"
                         rel="noopener" class="donate-link">PayPal</a></p>
             </div>
         </div>
