--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -15,14 +15,14 @@
     <meta name="og:description" content="Calculate the product of a complete hydrocarbon combustion." />
     <meta name="twitter:description" content="Calculate the product of a complete hydrocarbon combustion." />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/carboncombustions" />
-    <link rel="canonical" href="https://www.mathflare.tk/carboncombustions">
+    <meta name="og:url" content="https://www.mathflare.xyz/carboncombustions" />
+    <link rel="canonical" href="https://www.mathflare.xyz/carboncombustions">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
