--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
     <meta name="author" content="MathFlare Co Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk" />
+    <meta name="og:url" content="https://www.mathflare.xyz" />
     <meta name="og:title" content="MathFlare" />
     <meta name="og:description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
@@ -25,8 +25,8 @@
     <meta name="twitter:description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="canonical" href="https://www.mathflare.tk">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="canonical" href="https://www.mathflare.xyz">
+    <link rel="home" href="https://www.mathflare.xyz">
     <meta name="theme-color" content="#FFC107">
     <!-- STYLES -->
     <link rel="manifest" href="manifest.json">
