--- a/license.html
+++ b/license.html
@@ -9,7 +9,7 @@
     <title>MathFlare - Software License</title>
     <meta name="title" content="MathFlare - Software License">
     <meta name="author" content="MathFlare Co. Ltd." />
-    <link rel="canonical" href="https://www.mathflare.tk/license">
+    <link rel="canonical" href="https://www.mathflare.xyz/license">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
