--- a/stats.html
+++ b/stats.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathFlare - Stats</title>
-    <link rel="canonical" href="https://www.mathflare.tk/stats">
+    <link rel="canonical" href="https://www.mathflare.xyz/stats">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
