--- a/tos.html
+++ b/tos.html
@@ -9,7 +9,7 @@
     <title>MathFlare - ToS</title>
     <meta name="title" content="MathFlare - ToS">
     <meta name="author" content="MathFlare Co. Ltd." />
-    <link rel="canonical" href="https://www.mathflare.tk/tos">
+    <link rel="canonical" href="https://www.mathflare.xyz/tos">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
         <section id="intro">
             <p>Your privacy is important to us. It is MathFlare&#39;s Co. Ltd. policy to respect your privacy and comply
                 with any applicable law and regulation regarding any personal information we may collect about you,
-                including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other
+                including across our website, <a href="https://www.mathflare.xyz">https://www.mathflare.xyz</a>, and other
                 sites we own and operate. </p>
             <p>This policy is effective as of 20 April 2021 and was last updated on 20 July 2021.</p>
         </section>
