--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -16,14 +16,14 @@
     <meta name="og:description" content="Easily calculate trigonometric numbers" />
     <meta name="twitter:description" content="Easily calculate trigonometric numbers" />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/trigcalculator" />
-    <link rel="canonical" href="https://www.mathflare.tk/trigcalculator">
+    <meta name="og:url" content="https://www.mathflare.xyz/trigcalculator" />
+    <link rel="canonical" href="https://www.mathflare.xyz/trigcalculator">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -63,7 +63,7 @@
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+sin" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
-            <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
+            <a href="https://www.mathflare.xyz/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
         </div>
         <hr style="width: 50%;">
@@ -85,7 +85,7 @@
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+cos" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
-            <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
+            <a href="https://www.mathflare.xyz/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
         </div>
         <hr style="width: 50%;">
@@ -107,7 +107,7 @@
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+tan" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
-            <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
+            <a href="https://www.mathflare.xyz/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
         </div>
         <hr style="width: 50%;">
