--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare - Contact">
     <meta name="author" content="MathFlare Co. Ltd." />
-    <link rel="canonical" href="https://www.mathflare.tk/contact">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="canonical" href="https://www.mathflare.xyz/contact">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
