--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -18,14 +18,14 @@
     <meta name="twitter:description"
         content="Calculate the lenght and the number of diagonals in the most popular polygons." />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/diagpolyg" />
-    <link rel="canonical" href="https://www.mathflare.tk/diagpolyg">
+    <meta name="og:url" content="https://www.mathflare.xyz/diagpolyg" />
+    <link rel="canonical" href="https://www.mathflare.xyz/diagpolyg">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
