--- a/displacement.html
+++ b/displacement.html
@@ -18,14 +18,14 @@
     <meta name="twitter:description"
         content="Calculate the displacement, speed and displacement duration of a mobile object." />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/displacement" />
-    <link rel="canonical" href="https://www.mathflare.tk/displacement">
+    <meta name="og:url" content="https://www.mathflare.xyz/displacement" />
+    <link rel="canonical" href="https://www.mathflare.xyz/displacement">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
