--- a/handshake.html
+++ b/handshake.html
@@ -18,14 +18,14 @@
     <meta name="twitter:description"
         content="Calculate the number of handshakes in a party based on the number of visitors." />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/handshake" />
-    <link rel="canonical" href="https://www.mathflare.tk/handshake">
+    <meta name="og:url" content="https://www.mathflare.xyz/handshake" />
+    <link rel="canonical" href="https://www.mathflare.xyz/handshake">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
