--- a/linear-systems.html
+++ b/linear-systems.html
@@ -16,14 +16,14 @@
     <meta name="og:description" content="Easily solve 2x2 system of equations" />
     <meta name="twitter:description" content="Easily solve 2x2 system of equations" />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/linear-systems" />
-    <link rel="canonical" href="https://www.mathflare.tk/linear-systems">
+    <meta name="og:url" content="https://www.mathflare.xyz/linear-systems" />
+    <link rel="canonical" href="https://www.mathflare.xyz/linear-systems">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
