--- a/percent.html
+++ b/percent.html
@@ -16,14 +16,14 @@
     <meta name="og:description" content="Easily calculate percentages" />
     <meta name="twitter:description" content="Easily calculate percentages" />
     <meta name="author" content="MathFlare Co. Ltd." />
-    <meta name="og:url" content="https://www.mathflare.tk/percent" />
-    <link rel="canonical" href="https://www.mathflare.tk/percent">
+    <meta name="og:url" content="https://www.mathflare.xyz/percent" />
+    <link rel="canonical" href="https://www.mathflare.xyz/percent">
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="Assets/logo.png">
-    <link rel="home" href="https://www.mathflare.tk">
+    <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
