fix: fixed icon links

--- a/calculator.html
+++ b/calculator.html
@@ -18,11 +18,11 @@
     <meta name="author" content="MathFlare Co. Ltd." />
     <meta name="og:url" content="https://www.mathflare.xyz/calculator" />
     <link rel="canonical" href="https://www.mathflare.xyz/calculator">
-    <meta name="og:image" content="Assets/logo.png" />
+    <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image" content="Assets/logo.png">
+    <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
@@ -33,7 +33,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="Assets/favicon.ico">
+    <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
 </head>
 
 <body>
