--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta name="og:title" content="MathFlare" />
     <meta name="og:description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
-    <meta name="og:image" content="Assets/logo.png" />
+    <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
-    <meta name="twitter:image" content="Assets/logo.png">
+    <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="canonical" href="https://www.mathflare.xyz">
     <link rel="home" href="https://www.mathflare.xyz">
     <meta name="theme-color" content="#FFC107">
@@ -43,7 +43,7 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    <link rel="icon" href="Assets/favicon.ico">
+    <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
 </head>
 
 <body>
