prod: updated favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare</title>
+    <title>MathFlare - Home</title>
     <meta name="title" content="MathFlare">
     <meta name="keywords"
         content="mathflare, math-flare, math flare,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
