refactor: updated file names

--- a/stats.html
+++ b/stats.html
@@ -11,7 +11,7 @@
     <title>MathFlare - Stats</title>
     <link rel="canonical" href="https://www.mathflare.xyz/stats">
     <!-- STYLES -->
-    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -89,8 +89,8 @@
 
     </div>
     <!-- SCRIPTS START -->
-    <script src="Scripts/jquery-3.0.0.js"></script>
-    <script src="Scripts/bootstrap.js"></script>
+    <script src="dist/jquery-3.6.0-min.js"></script>
+    <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/stats.js"></script>
     <script>
