--- a/404.html
+++ b/404.html
@@ -9,15 +9,14 @@
     <meta http-equiv="refresh" content="10">
     <title>MathFlare - 404</title>
     <!-- STYLES -->
-    <link href="./Content/bootstrap.css" rel="stylesheet" />
+    <link href="./Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="./Styles/Scrollbar.css" rel="stylesheet" />
     <link href="./Styles/Site.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="./https://www.mathflare.xyz/Assets/favicon.ico">
+    <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
 </head>
 
 <body>
@@ -37,8 +36,8 @@
         </div>
     </div>
     <!-- SCRIPTS START -->
-    <script src="./Scripts/jquery-3.0.0.js"></script>
-    <script src="./Scripts/bootstrap.js"></script>
+    <script src="./dist/jquery-3.6.0-min.js"></script>
+    <script src="./dist/bootstrap-5.1-min.js"></script>
     <script src="./dist/navbar.js"></script>
     <script src="./dist/http-404.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
