--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
     <meta name="theme-color" content="#FFC107">
     <!-- STYLES -->
     <link rel="manifest" href="manifest.json">
-    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="Assets/android-chrome-192x192.png" sizes=192x192>
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -125,8 +124,8 @@
         </div>
     </div>
     <!-- SCRIPTS START -->
-    <script src="Scripts/jquery-3.0.0.js"></script>
-    <script src="Scripts/bootstrap.js"></script>
+    <script src="dist/jquery-3.6.0-min.js"></script>
+    <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script>
         if (typeof (Storage) !== 'undefined') {
