--- a/tos.html
+++ b/tos.html
@@ -11,10 +11,10 @@
     <meta name="author" content="MathFlare Co. Ltd." />
     <link rel="canonical" href="https://www.mathflare.xyz/tos">
     <!-- STYLES -->
-    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -101,8 +101,8 @@
     </div>
     <!-- TOS END -->
     <!-- SCRIPTS START -->
-    <script src="Scripts/jquery-3.0.0.js"></script>
-    <script src="Scripts/bootstrap.js"></script>
+    <script src="dist/jquery-3.6.0-min.js"></script>
+    <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
