--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -33,6 +33,9 @@
     
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="Assets/android-chrome-192x192.png" sizes=192x192>
+    <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
 </head>
 
